// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListWithConditions component renders conditions correctly 1`] = `
<div>
  'room1' to 'room2': closet
</div>
`;

exports[`ListWithConditions component renders non-conditions correctly 1`] = `
Array [
  <div>
    'room1' to 'room2': closet
  </div>,
  <div>
    'room1' to 'room3': lobby
  </div>,
]
`;
